--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -10,6 +10,8 @@ body {
   color: $dark-blue;
 }
 
+/*  body::-webkit-scrollbar { width: 0; } */
+
 a {
   text-decoration: none;
 }
@@ -32,19 +34,22 @@ input[type="radio"].visually-hidden {
 .container {
   width: 100%;
   margin: 0 auto;
-  padding: 0;
+  padding: 0 10px;
   max-width: 1200px;
   min-width: 320px;
+  box-sizing: border-box;
 
 
   @media (min-width: $tablet-width) {
     min-width: 660px;
     margin: 0 auto;
+    padding: 0 20px;
   }
 
   @media (min-width: $desktop-width) {
     min-width: 940px;
     margin: 0 auto;
+    padding: 0 40px;
   }
 }
 
