--- a/source/sass/components/contacts.scss
+++ b/source/sass/components/contacts.scss
@@ -2,71 +2,73 @@
   padding: 40px 20px 0;
   text-align: center;
   width: 280px;
+  box-sizing: border-box;
 }
 
-.contacts__header {
-  margin: 0 0 30px;
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: 300;
+  .contacts__header {
+    margin: 0 0 30px;
+    line-height: 34px;
+    font-size: 24px;
+    font-weight: 300;
 
-  @media (min-width: $tablet-width) {
-    font-size: 40px;
-    line-height: 48px;
-    padding-left: 100px;
-    padding-right: 100px;
-    margin-top: 40px;
-    margin-bottom: 40px;
-  }
-
-  @media (min-width: $desktop-width) {
-
+    @media (min-width: $tablet-width) {
+      font-size: 40px;
+      line-height: 48px;
+      padding-left: 157px;
+    padding-right: 166px;
+      margin-top: 40px;
+      margin-bottom: 40px;
   }
 }
 
-.contacts__title {
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 28px;
-  margin: 0;
-  padding: 0;
-}
-
-.contacts__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-
-  @media (min-width: $tablet-width) {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+  .contacts__title {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 28px;
+    margin: 0;
+    padding: 0;
   }
 
-  @media (min-width: $desktop-width) {
-    flex-wrap: nowrap;
+  .contacts__list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    @media (min-width: $tablet-width) {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+    }
+
+    @media (min-width: $desktop-width) {
+      flex-wrap: nowrap;
+    }
   }
+
+  .contacts__info {
+    margin: 0;
+    color: $light-red;
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 36px;
+  }
+
+  .contacts__item {
+    margin-bottom: 25px;
+    box-sizing: border-box;
+    margin-right: 20px;
+
+    @media (min-width: $tablet-width) {
+      width: 47%;
+    }
+  }
+
+  .contacts__item--email {
+
+    @media (min-width: $desktop-width) {
+      order: 1;
+    }
+
 }
 
-.contacts__info {
-  margin: 0;
-  color: $light-red;
-  font-size: 24px;
-  font-weight: 300;
-  line-height: 36px;
-}
-
-.contacts__item {
-  margin-bottom: 25px;
-
-  @media (min-width: $tablet-width) {
-    width: 47%;
-  }
-}
-
-.contacts__item--email {
-  @media (min-width: $desktop-width) {
-    order: 1;
-  }
- }
