--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -35,19 +35,18 @@ input[type="radio"].visually-hidden {
   width: 100%;
   margin: 0 auto;
   padding: 0 10px;
-  max-width: 1200px;
   min-width: 320px;
   box-sizing: border-box;
 
 
   @media (min-width: $tablet-width) {
-    min-width: 660px;
+    width: 660px;
     margin: 0 auto;
     padding: 0 20px;
   }
 
   @media (min-width: $desktop-width) {
-    min-width: 940px;
+    width: 960px;
     margin: 0 auto;
     padding: 0 40px;
   }
