--- a/source/sass/components/page-intro.scss
+++ b/source/sass/components/page-intro.scss
@@ -18,6 +18,27 @@
 
 }
 
+@media (min-width: 320px) and (min-resolution: 144dpi), (min-width: 320px) and (min-resolution: 1.5dppx) {
+  .page-intro {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+    background-size: auto 461px;
+  }
+}
+
+@media (min-width: 660px) and (min-resolution: 144dpi), (min-width: 660px) and (min-resolution: 1.5dppx) {
+  .page-intro {
+    background-image: url("../img/bg-back-tablet@2x.jpg");
+    background-size: auto 729px;
+  }
+}
+
+@media (min-width: 960px) and (min-resolution: 144dpi), (min-width: 960px) and (min-resolution: 1.5dppx) {
+  .page-intro {
+    background-image: url("../img/bg-back-desktop@2x.jpg");
+    background-size: cover;
+  }
+}
+
 .page-intro__wrapper-picture-and-button {
   width: 100%;
 
