--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,3 +21,5 @@
 @import "components/price.scss";
 @import "components/contest.scss";
 @import "components/submit-poppup.scss";
+@import "components/logo-icon.scss";
+@import "components/footer-logo.scss";
