--- a/source/sass/components/panorama.scss
+++ b/source/sass/components/panorama.scss
@@ -39,6 +39,13 @@
   }
 }
 
+.panorama__picture-wrapper {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  line-height: 0;
+}
+
 .panorama__username {
   font-weight: 700;
   padding: 0;
