--- a/source/sass/components/section.scss
+++ b/source/sass/components/section.scss
@@ -22,7 +22,27 @@
   @media (min-width: $desktop-width) {
     background-image: url("../img/bg-back-desktop@1x.jpg");
   }
+}
 
+@media (min-width: 320px) and (min-resolution: 144dpi), (min-width: 320px) and (min-resolution: 1.5dppx) {
+  .page-main__info {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+    background-size: auto 460px;
+  }
+}
+
+@media (min-width: 660px) and (min-resolution: 144dpi), (min-width: 660px) and (min-resolution: 1.5dppx) {
+  .page-main__info {
+    background-image: url("../img/bg-back-tablet@2x.jpg");
+    background-size: auto 729px;
+  }
+}
+
+@media (min-width: 960px) and (min-resolution: 144dpi), (min-width: 960px) and (min-resolution: 1.5dppx) {
+  .page-main__info {
+    background-image: url("../img/bg-back-desktop@2x.jpg");
+    background-size: cover;
+  }
 }
 
 .page-main__description {
