--- a/source/sass/components/header.scss
+++ b/source/sass/components/header.scss
@@ -1,6 +1,5 @@
 .page-header {
   position: relative;
-  background-color: #283645;
 
   @media (min-width: $desktop-width) {
     position: absolute;
@@ -18,6 +17,9 @@
 
 .page-header__image {
   fill: white;
+  position: relative;
+  right: 51px;
+  top: 5px;
 }
 
 .page-header__logo {
@@ -25,6 +27,8 @@
 }
 
 .page-header__сontainer {
+  background: rgba(0, 0, 0, 0.3);
+  height: 66px;
 
   @media (min-width: $desktop-width) {
     display: flex;
