--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -10,7 +10,7 @@ body {
   color: $dark-blue;
 }
 
-/*  body::-webkit-scrollbar { width: 0; } */
+ body::-webkit-scrollbar { width: 0; }
 
 a {
   text-decoration: none;
