--- a/source/sass/components/page-intro.scss
+++ b/source/sass/components/page-intro.scss
@@ -4,6 +4,7 @@
   background-size: 100% auto;
   background-position: top center;
   background-repeat: no-repeat;
+  margin-top: -67px;
 
 
   @media (min-width: $tablet-width) {
@@ -18,21 +19,24 @@
 
 }
 
-@media (min-width: 320px) and (min-resolution: 144dpi), (min-width: 320px) and (min-resolution: 1.5dppx) {
+@media (min-width: 320px) and (min-resolution: 144dpi),
+(min-width: 320px) and (min-resolution: 1.5dppx) {
   .page-intro {
     background-image: url("../img/bg-back-mobile@2x.jpg");
     background-size: auto 461px;
   }
 }
 
-@media (min-width: 660px) and (min-resolution: 144dpi), (min-width: 660px) and (min-resolution: 1.5dppx) {
+@media (min-width: 660px) and (min-resolution: 144dpi),
+(min-width: 660px) and (min-resolution: 1.5dppx) {
   .page-intro {
     background-image: url("../img/bg-back-tablet@2x.jpg");
     background-size: auto 729px;
   }
 }
 
-@media (min-width: 960px) and (min-resolution: 144dpi), (min-width: 960px) and (min-resolution: 1.5dppx) {
+@media (min-width: 960px) and (min-resolution: 144dpi),
+(min-width: 960px) and (min-resolution: 1.5dppx) {
   .page-intro {
     background-image: url("../img/bg-back-desktop@2x.jpg");
     background-size: cover;
@@ -41,11 +45,17 @@
 
 .page-intro__wrapper-picture-and-button {
   width: 100%;
+  margin-top: 177px;
 
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: row;
   }
+}
+
+.page-intro__picture {
+  display: block;
+  padding-right: 60px;
 }
 
 .page-intro__button {
@@ -56,9 +66,11 @@
   line-height: 18px;
   border-radius: 25px;
   border: 3px solid $white;
-  padding: 16px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  padding: 15px;
+  margin-top: 11px;
+  margin-bottom: 9px;
+  width: 280px;
+}
 }
 
 .page-intro__list {
@@ -95,6 +107,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 17px;
+
 
   @media (min-width: $tablet-width) {
     background-color: transparent;
