--- a/source/sass/components/photo-list.scss
+++ b/source/sass/components/photo-list.scss
@@ -12,7 +12,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    max-width: 940px;
+    max-width: 960px;
   }
 }
 
@@ -30,6 +30,8 @@
     width: 300px;
     margin: 0 auto 21px;
   }
+
+  @media (min-width: $desktop-width) {}
 }
 
 .photo-list__inner {
@@ -45,7 +47,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-left: -25px;
-    margin-right: -25px;
+    margin-left: 0px;
+    width: 960px;
   }
 }
