--- a/source/sass/components/features.scss
+++ b/source/sass/components/features.scss
@@ -11,24 +11,23 @@
     margin-bottom: 20px;
     display: block;
   }
+}
 
-  &--two {
-    display: block;
-    padding-top: 10px;
-  }
+@media (min-width: $tablet-width) {
+  font-size: 40px;
+  line-height: 30px;
+}
 
-  @media(min-width: $tablet-width) {
-    font-size: 40px;
-    line-height: 30px;
-  }
-
-  @media(min-width: $desktop-width) {
-    font-size: 50px;
-    line-height: 40px;
-  }
+@media (min-width: $desktop-width) {
+  font-size: 50px;
+  line-height: 40px;
+}
 }
 
 .features__slogan--two {
+  display: block;
+  padding-top: 10px;
+
   @media (min-width: $tablet-width) {
     width: 340px;
   }
@@ -44,7 +43,6 @@
   margin: 0;
   padding: 10px;
   text-align: center;
-  position: relative;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -60,7 +58,6 @@
     flex-direction: row;
     padding-top: 300px;
   }
-
 }
 
 .features__wrapper {
@@ -103,25 +100,24 @@
     margin-left: auto;
   }
 
-  @media(min-width: $desktop-width) {
+  @media (min-width: $desktop-width) {
     margin-right: auto;
   }
 }
 
 
 .features__item--friends::after {
-
   content: "";
   display: block;
   height: 330px;
   width: 150px;
-  background-image: url(../img/iphone-screen-mobile@1x.png);
+  background-image: url("../img/iphone-screen-mobile@1x.png");
   background-repeat: no-repeat;
   background-position: center;
 
   @media (min-width: $tablet-width) {
     content: "";
-    background-image: url(../img/iphone-screen-3-tablet@1x.png);
+    background-image: url("../img/iphone-screen-3-tablet@1x.png");
     position: absolute;
     background-position: center;
     background-repeat: no-repeat;
@@ -133,7 +129,7 @@
 
   @media (min-width: $desktop-width) {
     content: "";
-    background-image: url(../img/iphone-screen-3-desktop@1x.png);
+    background-image: url("../img/iphone-screen-3-desktop@1x.png");
     position: absolute;
     background-position: top;
     background-repeat: no-repeat;
@@ -169,10 +165,9 @@
 
 
 .features__item--change::after {
-
   @media (min-width: $desktop-width) {
     content: "";
-    background-image: url(../img/iphone-screen-2-desktop@1x.png);
+    background-image: url("../img/iphone-screen-2-desktop@1x.png");
     position: absolute;
     background-position: top;
     background-repeat: no-repeat;
@@ -183,7 +178,8 @@
   }
 }
 
-@media (min-width: 960px) and (min-resolution: 144dpi), (min-width: 960px) and (min-resolution: 1.5dppx) {
+@media (min-width: 960px) and (min-resolution: 144dpi),
+(min-width: 960px) and (min-resolution: 1.5dppx) {
   .features__item--change::after {
     background-image: url("../img/iphone-screen-2-desktop@2x.png");
     background-size: 270px auto;
@@ -194,9 +190,8 @@
 .features__item--mood::after {
 
   @media (min-width: $desktop-width) {
-
     content: "";
-    background-image: url(../img/iphone-screen-1-desktop@1x.png);
+    background-image: url("../img/iphone-screen-1-desktop@1x.png");
     position: absolute;
     background-position: top;
     background-repeat: no-repeat;
@@ -207,7 +202,8 @@
   }
 }
 
-@media (min-width: 960px) and (min-resolution: 144dpi), (min-width: 960px) and (min-resolution: 1.5dppx) {
+@media (min-width: 960px) and (min-resolution: 144dpi),
+(min-width: 960px) and (min-resolution: 1.5dppx) {
   .features__item--mood::after {
     background-image: url("../img/iphone-screen-1-desktop@2x.png");
     background-size: 270px auto;
