--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -22,8 +22,8 @@
   left: 0;
   width: 50px;
   height: 4px;
-  background-color: #fff;
-  box-shadow: 0 10px 0 0 #fff, 0 20px 0 0 #fff;
+  background-color: $white;
+  box-shadow: 0 10px 0 0 $white, 0 20px 0 0 $white;
 }
 
 
@@ -57,7 +57,7 @@
 
 .main-nav__toggle--closed::after,
 .main-nav__toggle--closed::before {
-  content: '';
+  content:"";
   position: absolute;
   top: 8px;
   right: 19px;
@@ -68,14 +68,12 @@
   box-shadow: none;
 }
 
-
 .main-nav__list {
   display: none;
   top: 56px;
   left: 0;
   position: absolute;
   right: 0;
-
 
   @media (min-width: $desktop-width) {
     display: flex;
