--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,7 +1,7 @@
 @import "base/variables.scss";
 @import "base/base.scss";
 @import "base/fonts.scss";
-@import "components/header.scss";
+@import "components/page-header.scss";
 @import "components/site-list.scss";
 @import "components/main-nav.scss";
 @import "components/section.scss";
