--- a/source/sass/components/contest.scss
+++ b/source/sass/components/contest.scss
@@ -36,9 +36,10 @@
 .contest__list {
   display: flex;
   flex-direction: column;
-  margin-left: 20px;
-  margin-right: 30px;
-  padding: 0 20px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
 
   @media (min-width: $desktop-width) {
     display: flex;
@@ -99,12 +100,10 @@
     padding-top: 3px;
     padding-bottom: 29px;
   }
-
 }
 
 .contest__input {
   width: 278px;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   height: 63px;
   padding-right: 15px;
@@ -132,7 +131,6 @@
   margin: 0 auto;
   text-align: center;
   font-weight: 400;
-  margin: 0;
   margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
@@ -182,12 +180,6 @@
   }
 }
 
-.contest__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
 .contest__list-item {
   padding-left: 86px;
   margin-bottom: 30px;
@@ -206,7 +198,7 @@
   left: 20px;
   width: 35px;
   height: 35px;
-  background-color: #fff;
+  background-color: $white;
   border: 2px solid #e5e5e5;
 }
 
@@ -220,7 +212,6 @@
   height: 8px;
   border-bottom: 2px solid #d22856;
   border-left: 2px solid #d22856;
-  -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
 
@@ -266,7 +257,7 @@
   left: 21px;
   width: 35px;
   height: 35px;
-  background: #fff;
+  background: $white;
   border: 2px solid #e5e5e5;
   border-radius: 50%;
 }
@@ -292,7 +283,6 @@
 
 .contest__textarea {
   padding: 15px 20px;
-  min-height: 64px;
   font-size: 18px;
   line-height: 30px;
   border: 2px solid #e5e5e5;
@@ -327,10 +317,6 @@
     flex-direction: row;
     align-items: flex-end;
     width: 100%;
-  }
-
-  @media (min-width: $desktop-width) {
-    ;
   }
 }
 
@@ -380,13 +366,11 @@
 .contest__fieldset-wrapper--name {
   @media (min-width: $tablet-width) {
     order: -5;
-
-
-    @media (min-width: $desktop-width) {
-      width: 50%
-    }
   }
 
+  @media (min-width: $desktop-width) {
+    width: 50%
+  }
 }
 
 .contest__fieldset-wrapper--application {
@@ -405,10 +389,6 @@
   }
 }
 
-.contest__fieldset--emotion {
-  @media (min-width: $tablet-width) {}
-}
-
 .contest__svg {
   fill: $light-red;
 }
@@ -417,7 +397,6 @@
   display: none;
 
   @media (min-width: $tablet-width) {
-    display: block;
     width: 59px;
     height: 59px;
     background-color: #e5e5e5;
@@ -445,7 +424,6 @@
   @media (min-width: $desktop-width) {
     flex-direction: row;
   }
-
 }
 
 .contest__list-item--shark {
