--- a/source/sass/components/price.scss
+++ b/source/sass/components/price.scss
@@ -107,7 +107,7 @@
   font-size: 14px;
   font-weight: 700;
   line-height: 30px;
-  color: rgba(255, 255, 255);
+  color: rgb(255, 255, 255);
 
   @media (min-width: $tablet-width) {
     top: 1px;
