--- a/source/sass/components/page-header.scss
+++ b/source/sass/components/page-header.scss
@@ -1,9 +1,14 @@
 .page-header {
+  position: absolute;
   background-color: rgba(0, 0, 0, 0.4);
   left: 0;
   right: 0;
   top: 0;
-  position: static;
+
+  &--nojs {
+    position: static;
+    background-color: $dark-blue;
+  }
 
   @media (min-width: $desktop-width) {
     position: absolute;
